<resources>
    <string name="app_name">KioK</string>

    <string name="slogan">Redécouvrez l\'apprentissage par coeur.</string>
    <string name="create_an_account">Créer un compte</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="sign_in">Se connecter</string>
    <string name="connection">connexion</string>
    <string name="form_field_username">Nom d\'utilisateur</string>
    <string name="form_field_email">Email</string>
    <string name="form_field_password">Mot de passe</string>
    <string name="start_without_account">Commencer sans compte</string>
    <string name="homepage_title">Accueil</string>
    <string name="collection_page_title">Collection</string>
    <string name="user_page_title">Profil</string>
    <string name="field_empty_error">Veuillez remplir ce champ.</string>
    <string name="field_email_error">Veuillez saisir une adresse email valide.</string>
    <string name="field_password_error">Veuillez saisir un mot de passe d\'au moins 8 caractères.</string>
    <string name="sign_out">Se déconnecter</string>
    <string name="loading">Chargement…</string>
    <string name="create_a_bundle">Créer un paquet</string>
    <string name="create">Créer</string>
    <string name="cancel">Annuler</string>
    <string name="bundle_already_exists">Ce paquet existe déjà.</string>
    <string name="revise">Réviser</string>
    <string name="delete">Supprimer</string>
    <string name="delete_bundle_alert_message">Êtes-vous sûr(e) de vouloir supprimer le paquet &lt;b>%1$s&lt;/b> ?</string>
    <string name="cannot_delete_bundle_message">Ce paquet ne peut être supprimé.</string>
    <string name="deleted_bundle_message">Le paquet %1$s a été supprimé.</string>
    <string name="deleted_question_message">La question a été supprimée.</string>
    <string name="name">Nom</string>
    <string name="new_name">Nouveau nom</string>
    <string name="rename_bundle">Renommer le paquet \"%1$s\"</string>
    <string name="rename">renommer</string>
    <string name="add_a_question">Ajouter une question</string>
    <string name="add">Ajouter</string>
    <string name="question_already_exists">Cette question existe déjà.</string>
    <string name="question">Question</string>
    <string name="answer">Réponse</string>
    <string name="search_a_bundle">Rechercher un paquet</string>
    <string name="bundle_all">Tous les paquets</string>
    <string name="sort_by">Trier par</string>
    <string name="sort_alpha">Ordre alphabétique</string>
    <string name="sort_oldest">Date d\'ajout (anciens)</string>
    <string name="sort_newest">Date d\'ajout (récents)</string>
    <string name="search">Rechercher</string>
    <string name="select_a_bundle">&lt;b>Selectionner un paquet&lt;/b></string>
    <string name="collection_no_questions">Ce paquet ne contient aucune question.</string>
    <string name="editing">Modification</string>
    <string name="edit">Modifier</string>
    <string name="see">Voir</string>
    <string name="check">Vérifier</string>
    <string name="correct_answer">&lt;b>Réponse:&lt;/b> %1$s</string>
    <string name="question_counter">%1$d/%2$d</string>
    <string name="cannot_revise_bundle_message">Ce paquet ne peut être révisé.</string>
    <string name="cannot_rename_bundle_message">Ce paquet ne peut être renommé.</string>
    <string name="ok">OK</string>
    <string name="delete_bundle_alert_title">Supprimer un paquet</string>
    <string name="confirmation_dialog_title">Êtes-vous sûr(e) ?</string>
    <string name="quit_revise_dialog_message">Toute votre progression dans cette révision sera perdue.</string>
    <string name="quit">quitter</string>
    <string name="save">Sauvegarder</string>
    <string name="edit_password">Modifier le mot de passe</string>
    <string name="form_field_former_password">Ancien mot de passe</string>
    <string name="form_field_new_password">Nouveau mot de passe</string>
    <string name="form_field_confirm_password">Confirmer le mot de passe</string>
    <string name="former_password_error">Ce n\'est pas votre mot de passe.</string>
    <string name="passwords_not_equals">Les mots de passe ne correspondent pas.</string>
    <string name="forgot_password">Mot de passe oublié</string>
    <string name="email_not_recognized">Cette email n\'est pas reconnu.</string>
    <string name="password_reset_email_sent">Un mail pour réinitialiser votre mot de passe vous a été envoyé.</string>
    <string name="password_modified">Votre mot de passe a été modifié.</string>
    <string name="send_password_reset_email_alert_message">Envoyer un mail à &lt;b>%1$s&lt;/b> pour réinitialier votre mot de passe</string>
    <string name="send">Envoyer</string>
    <string name="ask_password_dialog_title">Saisissez votre mot de passe</string>
    <string name="confirm">Confirmer</string>
    <string name="incorrect_password">Mot de passe incorrect.</string>
    <string name="can_now_edit_message">Vous pouvez maintenant modifier.</string>
    <string name="create_an_account_message">Vous n\'avez pas de compte.\nCréer un compte pour voir s\'afficher ici vos informations et sauvegarder vos données.</string>
    <string name="email_already_used_message">Cette adresse email est déjà utilisée.</string>

    <plurals name="quantity_of_questions">
        <item quantity="one">%d question</item>
        <item quantity="other">%d questions</item>
    </plurals>

</resources>
